- Filter Query for Facet Item Condition